--- a/exp8.html
+++ b/exp8.html
@@ -1,53 +1,46 @@
-assets/config.json 
-content_copy{ 
- "heroesUrl": "api/heroes", 
- "textfile": "assets/textfile.txt", 
- "date": "2020-01-29" 
-} 
+Step-1:
+app.component.html
 
-fetch-data.service.ts 
-import { HttpClient } from '@angular/common/http'; 
-import { Injectable } from '@angular/core'; 
-import { Observable } from 'rxjs'; 
-@Injectable({ 
-providedIn: 'root' 
-}) 
-export class FetchDataService { 
-constructor(private http:HttpClient) { } 
-getUser(): Observable<any>{ 
-return this.http.get("https://jsonplaceholder.typicode.com/users"); 
-} 
-} 
+<p>User Information: {{userInfo|json}}</p>
 
-  app.component.ts 
-import { Component } from '@angular/core'; 
-import { FetchDataService } from './fetch-data.service'; 
-@Component({ 
-selector: 'app-root', 
-templateUrl: './app.component.html', 
-styleUrls: ['./app.component.css'] 
-}) 
-export class AppComponent { 
-title = 'Demo'; 
-userList:any[] = []; 
-constructor(private fetchService: FetchDataService) {} 
-ngOnInit(): void{ 
-this.fetchService.getUser().subscribe(user => this.userList = user); 
-} 
-} 
-  
-Step-4: 
-app.component.html 
-<table style="margin: 0 auto; border: 1px black solid;"> 
-<thead> 
-<th style="border: 1px black solid; padding: 15px;">Name</th> 
-<th style="border: 1px black solid; padding: 15px;">Id</th> 
-<th style="border: 1px black solid; padding: 15px;">Email</th> 
-<th style="border: 1px black solid; padding: 15px;">Street</th> 
-</thead> 
-<tr *ngFor="let user of userList"> 
-<td style="border: 1px black solid; padding: 15px;">{{user.name}}</td> 
-<td style="border: 1px black solid; padding: 15px;">{{user.id}}</td> 
-<td style="border: 1px black solid; padding: 15px;">{{user.email}}</td> 
-<td style="border: 1px black solid; padding: 25px;">{{user.address.street}}</td> </tr> 
-</table>
+app.component.ts
+import { Component,OnInit } from'@angular/core';
+import { HttpClient } from'@angular/common/http';
+@Component({
+selector:'app-root',
+templateUrl:'./app.component.html',
+styleUrls: ['./app.component.css']
+})
+export class AppComponent implements OnInit {
+title='hello';
+publicuserInfo:any;
+public constructor(privatehttp:HttpClient) {}
+public ngOnInit():void {
+const url:string='/assets/data.json';
+this.http.get(url).subscribe((response) => {
+this.userInfo=response;
+});
+}
+}
+
+
+app.module.ts
+
+import { NgModule } from'@angular/core';
+import { BrowserModule } from'@angular/platform-browser';
+import { FormsModule } from'@angular/forms';
+import {HttpClientModule} from'@angular/common/http';
+import { AppRoutingModule } from'./app-routing.module';
+import { AppComponent } from'./app.component';
+@NgModule({
+declarations: [
+AppComponent
+],
+imports: [
+BrowserModule,
+AppRoutingModule,FormsModule,HttpClientModule
+],
+providers: [],
+bootstrap: [AppComponent]
+})
+exportclassAppModule { }
